Change color in progress bar

--- a/src/components/InkInfoPanel.css
+++ b/src/components/InkInfoPanel.css
@@ -6,7 +6,7 @@
 }
 
 .ink-progress {
-  background-color: #22d319;
+  background-color: #cfe2ff;
   height: 20px;
   border-radius: 10px;
   margin-top: 10px;
